welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:4: error: reassignment to val
}else if (a=b && a=c && b=c){
           ^